--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "concurrently": "^5.1.0",
     "json-server": "^0.16.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -15,7 +16,9 @@
     "victory": "^34.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently --kill-others-on-fail \"npm run serve-data\" \"npm run execute\"",
+    "execute": "react-scripts start",
+    "serve-data": "json-server --watch src/data/data.json --static src --port 3001",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
