--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "json-server": "^0.16.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "victory": "^34.1.1"
   },
   "scripts": {
